syntax = "proto3";

package proto;

//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative pb/users.proto

option go_package = "github.com/ebobo/learn_buf_grpc/proto";


service UserManagement{
    //grpc server provide 2 services (rpc call)
    rpc CreateUser (NewUser) returns (User) {}
    rpc GetUser (GetUsersParams) returns (UserList) {} 
}

message NewUser {
    string name = 1;
    int32 age = 2;
}

message User {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
}


message GetUsersParams {

}

message UserList {
   repeated User users = 1;
}